--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "ConfigReplacer",
     "version": "2.0.1",
+    "name": "JsonDataModifier",
     "sptVersion": "~3.9",
     "author": "sgtlaggy",
     "contributors": [],
