--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "JsonDataModifier",
     "version": "3.1.4",
-    "sptVersion": "~3.9",
+    "sptVersion": "^3.9",
     "author": "sgtlaggy",
     "contributors": [],
     "license": "MIT",
